<resources>
    <string name="app_name">Fluff</string>
    <string name="start">Start Game</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>

    <string name="dig">Dig</string>
    <string name="fill">Fill</string>

    <string name="score_pattern">Score: %04d</string>
    <string name="lives_pattern">Lives: %01d</string>
    <string name="time">Time</string>

    <string name="game_over">Game Over</string>

</resources>
